--- a/manifest.json
+++ b/manifest.json
@@ -91,17 +91,18 @@
     },
     "h5" : {
         "router" : {
-            "base" : "/demo/news/website/"
+            "base" : "/"
         },
         "template" : "h5.template.html",
 		
 		// 配置h5跨域请求
 		"devServer": {
-		    "port": 8000,
+		    "port": 8002,
 		    "disableHostCheck": true,
 		    "proxy": {
 		        "/schoolhelp": {
-		            "target": "http://134.175.16.143:8080",
+					"pathRewrite": {"^/schoolhelp" : ""},
+		            "target": "http://localhost:8080",
 		            "changeOrigin": true,
 		            "secure": false
 		        }
